MB-9631: Fixing inefficient getItemEstimate()

- Iterate only the selected vbuckets while fetching
the item estimate at a shard level.
- Parallelize the estimateItemCount phase at shard
level during the warmup process.

Change-Id: Iaa76dfc83df78395c3fc23a658732abeeeb9fb2c
Reviewed-on: http://review.couchbase.org/30482
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>